--- a/package.json
+++ b/package.json
@@ -24,23 +24,24 @@
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
     "marked": "^0.3.6",
-    "ts-helpers": "^1.1.2"
+    "ts-helpers": "^1.1.2",
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.0"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.47",
     "@types/marked": "^0.0.28",
     "@types/node": "~7.0.16",
+    "angular-cli": "^1.0.0-beta.28.3",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.1",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.6.0",
     "karma-chrome-launcher": "~2.1.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
     "protractor": "~5.1.0",
     "ts-node": "~3.0.3",
     "tslint": "~5.2.0",
