--- a/package.json
+++ b/package.json
@@ -15,42 +15,42 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^0.6.8",
-    "@angular/animations": "6.0.7",
-    "@angular/common": "6.0.7",
-    "@angular/compiler": "6.0.7",
-    "@angular/core": "6.0.7",
-    "@angular/forms": "6.0.7",
-    "@angular/platform-browser": "6.0.7",
-    "@angular/platform-browser-dynamic": "6.0.7",
-    "@angular/router": "6.0.7",
+    "@angular-devkit/core": "^7.0.5",
+    "@angular/animations": "7.0.3",
+    "@angular/common": "7.0.3",
+    "@angular/compiler": "7.0.3",
+    "@angular/core": "7.0.3",
+    "@angular/forms": "7.0.3",
+    "@angular/platform-browser": "7.0.3",
+    "@angular/platform-browser-dynamic": "7.0.3",
+    "@angular/router": "7.0.3",
     "core-js": "^2.4.1",
-    "marked": "^0.3.9",
-    "rxjs": "^6.2.1",
+    "marked": "^0.5.1",
+    "rxjs": "^6.3.3",
     "zone.js": "^0.8.26",
     "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0-beta.2",
-    "@angular/cli": "^6.1.0-rc.0",
-    "@angular/compiler-cli": "6.0.7",
-    "@angular/language-service": "6.0.7",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^9.4.0",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "@angular-devkit/build-angular": "~0.10.5",
+    "@angular/cli": "^7.0.5",
+    "@angular/compiler-cli": "7.0.3",
+    "@angular/language-service": "7.0.3",
+    "@types/jasmine": "~2.8.11",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "^10.12.6",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "~3.3.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "pre-commit": "^1.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "2.7.2"
+    "protractor": "~5.4.1",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "3.1.6"
   }
 }
