add @angular/pwa, upgrade all deps, upgrade to angular 8-beta.11 and enable ivy, drop old browsers support, update lazyloaded to new ivy syntax

--- a/package.json
+++ b/package.json
@@ -8,49 +8,52 @@
     "build": "ng build --prod  --base-href ./ && cp CNAME dist/CNAME",
     "test": "ng test",
     "lint": "ng lint --force",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ivy-ngcc"
   },
   "pre-commit": [
     "lint"
   ],
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^0.6.8",
-    "@angular/animations": "7.2.4",
-    "@angular/common": "7.2.4",
-    "@angular/compiler": "7.2.4",
-    "@angular/core": "7.2.4",
-    "@angular/forms": "7.2.4",
-    "@angular/platform-browser": "7.2.4",
-    "@angular/platform-browser-dynamic": "7.2.4",
-    "@angular/router": "7.2.4",
-    "core-js": "^2.4.1",
-    "marked": "^0.3.9",
+    "@angular-devkit/core": "^8.0.0-beta.11",
+    "@angular/animations": "^8.0.0-beta.11",
+    "@angular/common": "^8.0.0-beta.11",
+    "@angular/compiler": "^8.0.0-beta.11",
+    "@angular/core": "^8.0.0-beta.11",
+    "@angular/forms": "^8.0.0-beta.11",
+    "@angular/platform-browser": "^8.0.0-beta.11",
+    "@angular/platform-browser-dynamic": "^8.0.0-beta.11",
+    "@angular/pwa": "^0.800.0-beta.11",
+    "@angular/router": "^8.0.0-beta.11",
+    "@angular/service-worker": "^8.0.0-beta.11",
+    "core-js": "^3.0.1",
+    "marked": "^0.6.2",
     "rxjs": "^6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.8.29"
+    "tslib": "^1.9.3",
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.1",
-    "@angular/compiler-cli": "7.2.4",
-    "@angular/language-service": "7.2.4",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^9.4.0",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "@angular-devkit/build-angular": "^0.800.0-beta.11",
+    "@angular/cli": "^8.0.0-beta.11",
+    "@angular/compiler-cli": "^8.0.0-beta.11",
+    "@angular/language-service": "^8.0.0-beta.11",
+    "@types/jasmine": "~3.3.12",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "^11.13.0",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.0.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "pre-commit": "^1.2.2",
     "protractor": "^5.4.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "3.2.4"
+    "ts-node": "~8.0.3",
+    "tslint": "~5.15.0",
+    "typescript": "3.4.2"
   }
 }
