update to angular@next

--- a/package.json
+++ b/package.json
@@ -15,35 +15,35 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^8.0.0-beta.11",
-    "@angular/animations": "^8.0.0-beta.11",
-    "@angular/common": "^8.0.0-beta.11",
-    "@angular/compiler": "^8.0.0-beta.11",
-    "@angular/core": "^8.0.0-beta.11",
-    "@angular/forms": "^8.0.0-beta.11",
-    "@angular/platform-browser": "^8.0.0-beta.11",
-    "@angular/platform-browser-dynamic": "^8.0.0-beta.11",
-    "@angular/pwa": "^0.800.0-beta.11",
-    "@angular/router": "^8.0.0-beta.11",
-    "@angular/service-worker": "^8.0.0-beta.11",
-    "core-js": "^2.4.1",
+    "@angular-devkit/core": "next",
+    "@angular/animations": "next",
+    "@angular/common": "next",
+    "@angular/compiler": "next",
+    "@angular/core": "next",
+    "@angular/forms": "next",
+    "@angular/platform-browser": "next",
+    "@angular/platform-browser-dynamic": "next",
+    "@angular/pwa": "next",
+    "@angular/router": "next",
+    "@angular/service-worker": "next",
+    "core-js": "^3.0.1",
     "marked": "^0.6.2",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.3",
     "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.0-beta.11",
-    "@angular/cli": "^8.0.0-beta.11",
-    "@angular/compiler-cli": "^8.0.0-beta.11",
-    "@angular/language-service": "^8.0.0-beta.11",
+    "@angular-devkit/build-angular": "next",
+    "@angular/cli": "next",
+    "@angular/compiler-cli": "next",
+    "@angular/language-service": "next",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^11.13.2",
+    "@types/node": "^11.13.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
@@ -51,8 +51,8 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "pre-commit": "^1.2.2",
     "protractor": "^5.4.2",
-    "ts-node": "~8.0.3",
-    "tslint": "~5.15.0",
-    "typescript": "3.3.3333"
+    "ts-node": "~8.1.0",
+    "tslint": "~5.16.0",
+    "typescript": "3.4.3"
   }
 }
