set vendorChunk to false and add browserslist for differential loading

--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
               "aot": true,
               "es5BrowserSupport": false,
               "extractLicenses": true,
-              "vendorChunk": true,
+              "vendorChunk": false,
               "buildOptimizer": true,
               "fileReplacements": [
                 {
