--- a/package.json
+++ b/package.json
@@ -15,32 +15,31 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "next",
-    "@angular/animations": "next",
-    "@angular/common": "next",
-    "@angular/compiler": "next",
-    "@angular/core": "next",
-    "@angular/forms": "next",
-    "@angular/platform-browser": "next",
-    "@angular/platform-browser-dynamic": "next",
-    "@angular/platform-server": "next",
-    "@angular/pwa": "next",
-    "@angular/router": "next",
-    "@angular/service-worker": "next",
-    "core-js": "^3.0.1",
+    "@angular/animations": "8.0.0",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/forms": "8.0.0",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/platform-server": "8.0.0",
+    "@angular/pwa": "0.800.0",
+    "@angular/router": "8.0.0",
+    "@angular/service-worker": "8.0.0",
+    "core-js": "^3.1.3",
     "marked": "^0.6.2",
-    "rxjs": "^6.5.1",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.3",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "next",
-    "@angular/cli": "next",
-    "@angular/compiler-cli": "next",
-    "@angular/language-service": "next",
-    "@types/jasmine": "~3.3.12",
+    "@angular-devkit/build-angular": "0.800.0",
+    "@angular/cli": "8.0.0",
+    "@angular/compiler-cli": "8.0.0",
+    "@angular/language-service": "8.0.0",
+    "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^12.0.0",
+    "@types/node": "^12.0.3",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,7 +51,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "pre-commit": "^1.2.2",
     "protractor": "^5.4.2",
-    "ts-node": "~8.1.0",
+    "ts-node": "~8.2.0",
     "tslint": "~5.16.0",
     "typescript": "3.4.5"
   }
