--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/service-worker": "8.2.3",
     "core-js": "^3.2.1",
     "marked": "^0.7.0",
+    "ngx-quicklink": "^0.1.3",
     "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
