--- a/package.json
+++ b/package.json
@@ -15,35 +15,35 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.3",
-    "@angular/common": "8.2.3",
-    "@angular/compiler": "8.2.3",
-    "@angular/core": "8.2.3",
-    "@angular/forms": "8.2.3",
-    "@angular/platform-browser": "8.2.3",
-    "@angular/platform-browser-dynamic": "8.2.3",
-    "@angular/pwa": "0.803.0",
-    "@angular/router": "8.2.3",
-    "@angular/service-worker": "8.2.3",
+    "@angular/animations": "8.2.6",
+    "@angular/common": "8.2.6",
+    "@angular/compiler": "8.2.6",
+    "@angular/core": "8.2.6",
+    "@angular/forms": "8.2.6",
+    "@angular/platform-browser": "8.2.6",
+    "@angular/platform-browser-dynamic": "8.2.6",
+    "@angular/pwa": "0.803.4",
+    "@angular/router": "8.2.6",
+    "@angular/service-worker": "8.2.6",
     "core-js": "^3.2.1",
     "marked": "^0.7.0",
-    "ngx-quicklink": "^0.1.3",
-    "rxjs": "^6.5.2",
+    "ngx-quicklink": "^0.1.4",
+    "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.0",
-    "@angular/cli": "8.3.0",
-    "@angular/compiler-cli": "8.2.3",
-    "@angular/language-service": "8.2.3",
+    "@angular-devkit/build-angular": "0.803.4",
+    "@angular/cli": "8.3.4",
+    "@angular/compiler-cli": "8.2.6",
+    "@angular/language-service": "8.2.6",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^12.7.2",
+    "@types/node": "^12.7.5",
     "codelyzer": "^5.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.2.0",
+    "karma": "~4.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
@@ -51,8 +51,8 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "pre-commit": "^1.2.2",
     "protractor": "^5.4.2",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.19.0",
-    "typescript": "3.5.3"
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": "^3.5.3"
   }
 }
