@angular/cli migration - workspace-version-9 Angular Workspace migration. Update an Angular CLI workspace to version 9.

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,6 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": true,
-              "aot": true,
               "es5BrowserSupport": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -45,6 +44,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ],
               "fileReplacements": [
