--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,14 +3,10 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-    "module": "esnext",
     "types": []
   },
-  "angularCompilerOptions": {
-    "enableIvy": true
-  },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+  "files": [
+    "main.ts",
+    "polyfills.ts"
   ]
 }
