--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/forms": "9.0.0",
     "@angular/platform-browser": "9.0.0",
     "@angular/platform-browser-dynamic": "9.0.0",
-    "@angular/pwa": "0.803.23",
     "@angular/router": "9.0.0",
     "@angular/service-worker": "9.0.0",
     "core-js": "^3.6.4",
@@ -30,17 +29,17 @@
     "ngx-quicklink": "^0.2.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.1",
+    "@angular-devkit/build-angular": "~0.900.1",
     "@angular/cli": "9.0.1",
     "@angular/compiler-cli": "9.0.0",
     "@angular/language-service": "9.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.1.7",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
