--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
