Removed unused imports, fixed linting errors, added Dynamic Import for lazy loading of module compliant to angular 9 and higher versions

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,11 +3,8 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-    "module": "es2015",
+    "module": "esNext",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["test.ts", "**/*.spec.ts"]
 }
