--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,11 @@
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
+    "module": "esNext",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"]
   }
 }
