--- a/package.json
+++ b/package.json
@@ -15,41 +15,41 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.4",
-    "@angular/common": "7.2.4",
-    "@angular/compiler": "7.2.4",
-    "@angular/core": "7.2.4",
-    "@angular/forms": "7.2.4",
-    "@angular/platform-browser": "7.2.4",
-    "@angular/platform-browser-dynamic": "7.2.4",
-    "@angular/router": "7.2.4",
-    "core-js": "^2.4.1",
-    "marked": "^0.3.9",
-    "rxjs": "^6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.8.29"
+    "@angular/animations": "11.2.4",
+    "@angular/common": "11.2.4",
+    "@angular/compiler": "11.2.4",
+    "@angular/core": "11.2.4",
+    "@angular/forms": "11.2.4",
+    "@angular/platform-browser": "11.2.4",
+    "@angular/platform-browser-dynamic": "11.2.4",
+    "@angular/router": "11.2.4",
+    "core-js": "^3.9.1",
+    "marked": "^2.0.1",
+    "rxjs": "^6.6.6",
+    "tslib": "^2.1.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.1",
-    "@angular/compiler-cli": "7.2.4",
-    "@angular/language-service": "7.2.4",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^9.4.0",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "@angular-devkit/build-angular": "~0.1102.3",
+    "@angular/cli": "^11.2.3",
+    "@angular/compiler-cli": "11.2.4",
+    "@angular/language-service": "11.2.4",
+    "@types/jasmine": "~3.6.4",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^14.14.31",
+    "codelyzer": "^6.0.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "~6.1.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "pre-commit": "^1.2.2",
-    "protractor": "^5.4.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "3.2.4"
+    "protractor": "^7.0.0",
+    "ts-node": "~9.1.1",
+    "tslint": "~5.20.1",
+    "typescript": "^4.1.5"
   }
 }
