--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
     "webpack": "^5.0.0"
   },
   "dependencies": {
-    "@angular/animations": "11.1.0",
-    "@angular/common": "11.1.0",
-    "@angular/compiler": "11.1.0",
-    "@angular/core": "11.1.0",
-    "@angular/forms": "11.1.0",
-    "@angular/platform-browser": "11.1.0",
-    "@angular/platform-browser-dynamic": "11.1.0",
-    "@angular/router": "11.1.0",
-    "@angular/service-worker": "11.1.0",
-    "core-js": "^3.8.3",
-    "marked": "^1.2.8",
-    "ngx-quicklink": "^0.2.6",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.3"
+    "@angular/animations": "11.2.10",
+    "@angular/common": "11.2.10",
+    "@angular/compiler": "11.2.10",
+    "@angular/core": "11.2.10",
+    "@angular/forms": "11.2.10",
+    "@angular/platform-browser": "11.2.10",
+    "@angular/platform-browser-dynamic": "11.2.10",
+    "@angular/router": "11.2.10",
+    "@angular/service-worker": "11.2.10",
+    "core-js": "^3.10.1",
+    "marked": "^2.0.3",
+    "ngx-quicklink": "^0.2.7",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.2.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.1",
-    "@angular/cli": "11.1.1",
-    "@angular/compiler-cli": "11.1.0",
-    "@angular/language-service": "11.1.0",
-    "@types/jasmine": "~3.6.3",
+    "@angular-devkit/build-angular": "~0.1102.9",
+    "@angular/cli": "^11.2.9",
+    "@angular/compiler-cli": "11.2.10",
+    "@angular/language-service": "11.2.10",
+    "@types/jasmine": "~3.6.9",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.14.22",
+    "@types/node": "^14.14.40",
     "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.0.2",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
