--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod  --base-href ./ && cp CNAME dist/CNAME",
+    "build": "ng build --configuration production  --base-href ./ && cp CNAME dist/CNAME",
     "test": "ng test",
     "lint": "ng lint --force",
     "e2e": "ng e2e",
@@ -19,15 +19,15 @@
     "webpack": "^5.0.0"
   },
   "dependencies": {
-    "@angular/animations": "11.2.10",
-    "@angular/common": "11.2.10",
-    "@angular/compiler": "11.2.10",
-    "@angular/core": "11.2.10",
-    "@angular/forms": "11.2.10",
-    "@angular/platform-browser": "11.2.10",
-    "@angular/platform-browser-dynamic": "11.2.10",
-    "@angular/router": "11.2.10",
-    "@angular/service-worker": "11.2.10",
+    "@angular/animations": "12.1.1",
+    "@angular/common": "12.1.1",
+    "@angular/compiler": "12.1.1",
+    "@angular/core": "12.1.1",
+    "@angular/forms": "12.1.1",
+    "@angular/platform-browser": "12.1.1",
+    "@angular/platform-browser-dynamic": "12.1.1",
+    "@angular/router": "12.1.1",
+    "@angular/service-worker": "12.1.1",
     "core-js": "^3.10.1",
     "marked": "^2.0.3",
     "ngx-quicklink": "^0.2.7",
@@ -36,10 +36,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.9",
-    "@angular/cli": "^11.2.9",
-    "@angular/compiler-cli": "11.2.10",
-    "@angular/language-service": "11.2.10",
+    "@angular-devkit/build-angular": "~12.1.0",
+    "@angular/cli": "^12.1.0",
+    "@angular/compiler-cli": "12.1.1",
+    "@angular/language-service": "12.1.1",
     "@types/jasmine": "~3.6.9",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.14.40",
@@ -56,6 +56,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.3",
-    "typescript": "4.1.3"
+    "typescript": "4.3.5"
   }
 }
