--- a/package.json
+++ b/package.json
@@ -34,13 +34,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.2",
+    "@angular-eslint/builder": "13.2.0",
+    "@angular-eslint/eslint-plugin": "13.2.0",
+    "@angular-eslint/eslint-plugin-template": "13.2.0",
+    "@angular-eslint/schematics": "13.2.0",
+    "@angular-eslint/template-parser": "13.2.0",
     "@angular/cli": "^13.3.2",
     "@angular/compiler-cli": "13.3.2",
     "@angular/language-service": "13.3.2",
     "@types/jasmine": "~4.0.2",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^17.0.23",
-    "codelyzer": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "eslint": "^8.12.0",
     "jasmine-core": "~4.1.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.18",
@@ -52,7 +59,6 @@
     "pre-commit": "^1.2.2",
     "protractor": "~7.0.0",
     "ts-node": "~10.7.0",
-    "tslint": "~6.1.3",
     "typescript": "4.6.3"
   }
 }
