--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d262baf4-e5fd-4dcc-a1ef-44ffc69194d7"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
