feat: update cypress

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rx-angular/cdk": "latest",
     "@rx-angular/template": "^15.1.0",
     "marked": "^4.2.12",
+    "pre-commit": "^1.2.2",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
