--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/compiler-cli": "15.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^4.0.8",
+    "cypress": "^12.10.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
