--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint --force"
+    "lint": "ng lint --force",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "engines": {
     "node": "^14.20.0 || ^16.13.0 || ^18.10.0"
@@ -22,6 +24,7 @@
     "@angular/platform-browser": "15.2.3",
     "@angular/platform-browser-dynamic": "15.2.3",
     "@angular/router": "15.2.3",
+    "@faker-js/faker": "^7.6.0",
     "@rx-angular/cdk": "latest",
     "@rx-angular/template": "^15.1.0",
     "marked": "^4.2.12",
