--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.11",
-    "@angular/common": "16.2.11",
-    "@angular/compiler": "16.2.11",
-    "@angular/core": "16.2.11",
-    "@angular/forms": "16.2.11",
-    "@angular/platform-browser": "16.2.11",
-    "@angular/platform-browser-dynamic": "16.2.11",
-    "@angular/router": "16.2.11",
-    "@rx-angular/cdk": "latest",
-    "@rx-angular/template": "^16.1.1",
-    "marked": "^4.2.12",
+    "@angular/animations": "17.0.7",
+    "@angular/common": "17.0.7",
+    "@angular/compiler": "17.0.7",
+    "@angular/core": "17.0.7",
+    "@angular/forms": "17.0.7",
+    "@angular/platform-browser": "17.0.7",
+    "@angular/platform-browser-dynamic": "17.0.7",
+    "@angular/router": "17.0.7",
+    "@rx-angular/cdk": "17.0.0",
+    "@rx-angular/template": "17.0.0",
+    "marked": "^11.1.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.8",
-    "@angular/cli": "^16.2.8",
-    "@angular/compiler-cli": "16.2.11",
+    "@angular-devkit/build-angular": "^17.0.7",
+    "@angular/cli": "^17.0.7",
+    "@angular/compiler-cli": "17.0.7",
     "@types/jasmine": "~4.3.0",
-    "@types/marked": "^4.0.8",
+    "@types/marked": "^6.0.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
@@ -43,9 +43,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
-    "typescript": "~5.1.6"
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
+    "typescript": "~5.2.2"
   },
   "lint-staged": {
     "*.{ts,html,css,json,md}": "prettier --write"
