--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.7",
-    "@angular/cli": "^17.0.7",
+    "@angular-devkit/build-angular": "^17.1.0-rc.0",
+    "@angular/cli": "^17.1.0-rc.0",
     "@angular/compiler-cli": "17.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^6.0.0",
