--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.0.7",
-    "@angular/common": "17.0.7",
-    "@angular/compiler": "17.0.7",
-    "@angular/core": "17.0.7",
-    "@angular/forms": "17.0.7",
-    "@angular/platform-browser": "17.0.7",
-    "@angular/platform-browser-dynamic": "17.0.7",
-    "@angular/router": "17.0.7",
+    "@angular/animations": "17.2.1",
+    "@angular/common": "17.2.1",
+    "@angular/compiler": "17.2.1",
+    "@angular/core": "17.2.1",
+    "@angular/forms": "17.2.1",
+    "@angular/platform-browser": "17.2.1",
+    "@angular/platform-browser-dynamic": "17.2.1",
+    "@angular/router": "17.2.1",
     "@rx-angular/cdk": "17.0.0",
     "@rx-angular/template": "17.0.0",
     "marked": "^11.1.0",
@@ -31,12 +31,12 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.0-rc.0",
-    "@angular/cli": "^17.1.0-rc.0",
-    "@angular/compiler-cli": "17.0.7",
+    "@angular-devkit/build-angular": "^17.2.0",
+    "@angular/cli": "^17.2.0",
+    "@angular/compiler-cli": "17.2.1",
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^6.0.0",
-    "@web/test-runner": "^0.17.3",
+    "@web/test-runner": "^0.18.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
