--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Clean install with legacy peer deps
         run: npm install --legacy-peer-deps
 
-      - name: Run lint (optional)
-        run: npm run lint
+     - name: Run lint (continue even if it fails)
+      run: npm run lint || true
+
 
       - name: Run unit tests
         run: npm run test -- --watch=false --browsers=ChromeHeadless
