--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "prepare": "husky install"
   },
   "engines": {
-    "node": "^18.13.0 || ^20.9.0"
+    "node": "^20.11.1"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "18.0.0",
-    "@angular/common": "18.0.0",
-    "@angular/compiler": "18.0.0",
-    "@angular/core": "18.0.0",
-    "@angular/forms": "18.0.0",
-    "@angular/platform-browser": "18.0.0",
-    "@angular/platform-browser-dynamic": "18.0.0",
-    "@angular/router": "18.0.0",
+    "@angular/animations": "19.2.14",
+    "@angular/common": "19.2.14",
+    "@angular/compiler": "19.2.14",
+    "@angular/core": "19.2.14",
+    "@angular/forms": "19.2.14",
+    "@angular/platform-browser": "19.2.14",
+    "@angular/platform-browser-dynamic": "19.2.14",
+    "@angular/router": "19.2.14",
     "@rx-angular/cdk": "18.0.0",
     "@rx-angular/template": "18.0.0",
     "marked": "^11.1.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.1",
-    "@angular/cli": "^18.0.1",
-    "@angular/compiler-cli": "18.0.0",
+    "@angular-devkit/build-angular": "^19.2.14",
+    "@angular/cli": "^19.2.14",
+    "@angular/compiler-cli": "19.2.14",
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^6.0.0",
     "husky": "^8.0.3",
@@ -45,7 +45,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
-    "typescript": "~5.4.5"
+    "typescript": "~5.8.3"
   },
   "lint-staged": {
     "*.{ts,html,css,json,md}": "prettier --write"
