--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,10 @@ jobs:
           node-version: '18' 
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install
 
       - name: Build Angular app
-        run: npm run build  
+        run: ng build  
 
       - name: Deploy to build branch
         uses: JamesIves/github-pages-deploy-action@v4
