--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -44,12 +44,12 @@ jobs:
         run: |
           $timestamp = Get-Date -Format "yyyyMMdd-HHmmss"
           $backupPath = "D:\Jonathan\Tanny\PRODUCTION-backup-$timestamp"
-          Copy-Item -Path "D:\Jonathan\Tanny\PRODUCTION" -Destination $backupPath -Recurse -Force
+          Copy-Item -Path ".\*" -Destination "D:\Jonathan\Tanny\PRODUCTION" -Recurse -Force
 
       - name: Replace production with new build
         run: |
           Remove-Item -Path "D:\user\Tanny\PRODUCTION\*" -Recurse -Force
-          Copy-Item -Path "\*" -Destination "D:\Jonathan\Tanny\PRODUCTION" -Recurse -Force
+          Copy-Item -Path ".\*" -Destination "D:\Jonathan\Tanny\PRODUCTION" -Recurse -Force
 
       - name: Restart IIS (optional)
         run: iisreset
