v0 e2e tests passed, mostly vibed with Claude

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:disabled": "cat e2e/DISABLED_TESTS.md",
     "lint": "ng lint --force",
     "prepare": "husky install"
   },
@@ -37,11 +43,13 @@
     "@angular/build": "^20.0.0",
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "20.0.0",
+    "@playwright/test": "^1.56.1",
     "@types/marked": "^6.0.0",
     "@vitest/ui": "^4.0.6",
     "husky": "^8.0.3",
     "jsdom": "^27.1.0",
     "lint-staged": "^16.1.2",
+    "playwright": "^1.56.1",
     "prettier": "^3.1.1",
     "typescript": "~5.8.3",
     "vitest": "^3.2.4"
