--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:report": "playwright show-report",
     "test:e2e:disabled": "cat e2e/DISABLED_TESTS.md",
-    "lint": "ng lint --force",
+    "format": "prettier --write \"**/*.{ts,html,css,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,html,css,json,md}\"",
     "prepare": "husky install"
   },
   "engines": {
